Better option text "Block Wix?"

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,11 +8,13 @@
     <script defer src="js/index.js" type="application/javascript"></script>
   </head>
   <body>
+    <main>
     <form id="popupForm">
       <div>
-        <label for="enabled">Enabled?</label>
+        <label for="enabled">Block Wix?</label>
         <input type="checkbox" name="enabled" id="enabled-chkbx" checked="true">
       </div>
     </form>
+    </main>
   </body>
 </html>
