--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,7 +4,7 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/popup.css" rel="stylesheet">
     <script defer src="js/index.js" type="application/javascript"></script>
   </head>
   <body>
