--- a/src/notice.html
+++ b/src/notice.html
@@ -1,100 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>This is a Wix Site</title>
-    <meta charset="UTF-8">
-    <meta name="" content="default-src 'self';">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="notice.css" rel="stylesheet">
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #f5f5f5;
-      }
-
-      main {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-        height: 100vh;
-        text-align: center;
-      }
-
-      h1 {
-        font-size: 2.5rem;
-        margin-bottom: 1.5rem;
-        color: #333;
-      }
-
-      p {
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
-        color: #555;
-        line-height: 1.6;
-      }
-
-      .palflag {
-        font-size: 3rem;
-        margin-bottom: 2rem;
-      }
-
-      a {
-        color: #007BFF;
-        text-decoration: none;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
-
-      .links {
-        margin-top: 2rem;
-
-        & > ul {
-          list-style: none;
-        }
-      }
-
-      .expl-1 {
-        font-size: 1.5rem;
-        weight: 600;
-      }
-
-      .container {
-        max-width: 600px;
-        margin: 0 auto;
-      }
-
-      .footer {
-        margin-top: 2rem;
-        font-size: 0.8rem;
-        color: #888;
-      }
-    </style>
-  </head>
-  <body>
-    <main>
-      <div class="heading">
-        <h1>This is a <img src="../images/wix-logo.png" alt="" /> Site!</h1>
-        <p>The site you just visited <strong>%{visited_site}</strong></p>
-      </div>
-
-      <div class="explanation">
-        <p class="expl-1">End the illegal occupation of the Palestinian Territories and support justice for the people of Gaza.</p>
-      <span class="palflag">&#x1F1F5;&#x1F1F8;</span>
-      </div>
-      <div>
-        <p>To learn more please visit <a href="https://bdsmovement.net/" target="_new">BDS Movement</a>.</p>
-        <div class="links">
-          <ul>
-            <li><a href="https://bdsmovement.net/Act-Now-Against-These-Companies-Profiting-From-Genocide">Act now against these companies profiting from genocide</a></li>
-          </ul>
-        </div>
-      </div>
-    </main>
-    <script src="notice.js"></script>
-  </body>
+<head>
+	<title>This is a Wix Site</title>
+	<meta charset="UTF-8">
+	<meta name="" content="default-src 'self';">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="notice.css" rel="stylesheet">
+	<script src="notice.js"></script>
+</head>
+<body>
+	<main>
+		<img class="logo" src="../images/wixblockerlogo.svg" width="100px" alt="Wix prohibition logo">
+		<div class="heading-container">
+			<h1>BLOCKED</h1>
+			<p>
+				<strong>%{visited_site}</strong><br>
+				is using WIX, a company that profits from the illegal occupation of the Palestinian Territories.
+			</p>
+		</div>
+		<div class="bds-container">
+			<img class="pal-flag" src="placeholder" width="100px" alt="Palestinian flag">
+			<p>
+				By boycotting WIX, you're affirming the simple principle that Palestinians are entitled to the same rights as the rest of humanity.
+				To learn more please visit <a href="https://bdsmovement.net/" target="_new">BDS (Boycott, Divestment, Sanctions) Movement</a>.
+			</p>
+		</div>
+		<div>
+			<p>
+				If you wish to <a id="bypass-link">continue to the site</a> and turn off WIX Blocker, please consider contacting the site owner and asking them to move their site to a different platform. <a href="https://www.israelitechalternatives.com/company/wix/">Here</a> is a list of alternatives.
+			</p>
+			<p class="links">
+				List of resources:
+				<br>
+				<a href="https://www.boycotzionism.com/">Act now against these companies profiting from genocide</a></li>
+			</p>
+		</div>
+	</main>
+	<script src="notice.js"></script>
+</body>
 </html>
