design improvements, popup small fixes

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,12 +9,11 @@
   </head>
   <body>
     <main>
-    <form id="popupForm">
+      <img class="logo" src="../images/wixblockerlogo.svg" width="30px">
       <div>
-        <label for="enabled">Block Wix?</label>
+        <label for="enabled">BLOCK WIX?</label>
         <input type="checkbox" name="enabled" id="enabled-chkbx" checked="true">
       </div>
-    </form>
     </main>
   </body>
 </html>
