--- a/src/notice.html
+++ b/src/notice.html
@@ -16,21 +16,25 @@
           <img class="logo" src="../images/wixblockerlogo.svg" width="100px">
         </div>
         <p>
-          The site you just visited, <strong>%{visited_site}</strong>,
+          <strong>%{visited_site}</strong>,
           is using WIX, a company that profits from the illegal occupation of the Palestinian Territories.
         </p>
-        <p>End the illegal occupation of the Palestinian Territories and support justice for the people of Gaza.</p>
-        <span class="palflag">&#x1F1F5;&#x1F1F8;</span>
+        <br>
+        <hr>
+        <br>
+        <p>By boycotting WIX, you're affirming the simple principle that Palestinians are entitled to the same rights as the rest of humanity.
+          To learn more please visit <a href="https://bdsmovement.net/" target="_new">BDS (Boycott, Divestment, Sanctions) Movement</a>.</p>
         <p>
-          If you wish to <a id="bypass-link">continue to the site and turn off wix blocker</a>, please be aware that you are supporting a company
-          that profits from an illegal occupation and the oppression of the Palestinian people.
-          <br>
-          <br>
-          Please consider contacting the site owner and asking them to move their site to a different platform.
+
+        <div class="center">
+          <img src="../images/palflag.png" class="palflag " />
+        </div>
+        <p>
+          If you wish to <a id="bypass-link">continue to the site and turn off WIX Blocker</a>, please consider contacting the site owner and asking them to move their site to a different platform. <a href="https://www.israelitechalternatives.com/company/wix/">Here</a> is a list of alternatives.
         </p>
+
       </div>
-      <div>
-        <p>To learn more please visit <a href="https://bdsmovement.net/" target="_new">BDS (Boycott, Divestment, Sanctions) Movement</a>.</p>
+      <div class="center">
         <p class="links">
           List of resources:
           <br>
