--- a/src/notice.html
+++ b/src/notice.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <main>
+      
       <div class="heading-container">
         <div class="head">
           <h1>This site is using WIX.</h1>
@@ -40,6 +41,10 @@
           <br>
           <a href="https://bdsmovement.net/Act-Now-Against-These-Companies-Profiting-From-Genocide">Act now against these companies profiting from genocide</a></li>
         </p>
+      </div>
+      <div class="logos-container">
+        <a href="https://bdsmovement.net/"><img class="bdslogo" src="../images/bdslogo.png" alt=""></a>
+        <a href="https://techforpalestine.org/"><img class="tfplogo" src="../images/tfplogo.jpeg" alt=""></a>
       </div>
     </main>
     <script src="notice.js"></script>
