--- a/src/notice.html
+++ b/src/notice.html
@@ -6,93 +6,45 @@
     <meta name="" content="default-src 'self';">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="notice.css" rel="stylesheet">
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #f5f5f5;
-      }
-
-      main {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-        height: 100vh;
-        text-align: center;
-      }
-
-      h1 {
-        font-size: 2.5rem;
-        margin-bottom: 1.5rem;
-        color: #333;
-      }
-
-      p {
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
-        color: #555;
-        line-height: 1.6;
-      }
-
-      .palflag {
-        font-size: 3rem;
-        margin-bottom: 2rem;
-      }
-
-      a {
-        color: #007BFF;
-        text-decoration: none;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
-
-      .links {
-        margin-top: 2rem;
-
-        & > ul {
-          list-style: none;
-        }
-      }
-
-      .expl-1 {
-        font-size: 1.5rem;
-        weight: 600;
-      }
-
-      .container {
-        max-width: 600px;
-        margin: 0 auto;
-      }
-
-      .footer {
-        margin-top: 2rem;
-        font-size: 0.8rem;
-        color: #888;
-      }
-    </style>
+    <script src="notice.js"></script>
   </head>
   <body>
     <main>
-      <div class="heading">
-        <h1>This is a <img src="../images/wix-logo.png" alt="" /> Site!</h1>
-        <p>The site you just visited <strong>%{visited_site}</strong></p>
-      </div>
-
-      <div class="explanation">
-        <p class="expl-1">End the illegal occupation of the Palestinian Territories and support justice for the people of Gaza.</p>
-      <span class="palflag">&#x1F1F5;&#x1F1F8;</span>
-      </div>
-      <div>
-        <p>To learn more please visit <a href="https://bdsmovement.net/" target="_new">BDS Movement</a>.</p>
-        <div class="links">
-          <ul>
-            <li><a href="https://bdsmovement.net/Act-Now-Against-These-Companies-Profiting-From-Genocide">Act now against these companies profiting from genocide</a></li>
-          </ul>
+      
+      <div class="heading-container">
+        <div class="head">
+          <h1>This site is using WIX.</h1>
+          <img class="logo" src="../images/wixblockerlogo.svg" width="100px">
         </div>
+        <p>
+          <strong>%{visited_site}</strong>,
+          is using WIX, a company that profits from the illegal occupation of the Palestinian Territories.
+        </p>
+        <br>
+        <hr>
+        <br>
+        <p>By boycotting WIX, you're affirming the simple principle that Palestinians are entitled to the same rights as the rest of humanity.
+          To learn more please visit <a href="https://bdsmovement.net/" target="_new">BDS (Boycott, Divestment, Sanctions) Movement</a>.</p>
+        <p>
+
+        <div class="center">
+          <img src="../images/palflag.png" class="palflag " />
+        </div>
+        <p>
+          If you wish to <a id="bypass-link">continue to the site and turn off WIX Blocker</a>, please consider contacting the site owner and asking them to move their site to a different platform. <a href="https://www.israelitechalternatives.com/company/wix/">Here</a> is a list of alternatives.
+        </p>
+
+      </div>
+      <div class="center">
+        <p class="links">
+          List of resources:
+          <br>
+          <a href="https://bdsmovement.net/Act-Now-Against-These-Companies-Profiting-From-Genocide">Act now against these companies profiting from genocide</a></li>
+        </p>
+      </div>
+      <div class="logos-container">
+        <a href="https://bdsmovement.net/"><img class="bdslogo" src="../images/bdslogo.png" alt=""></a>
+        <a href="https://techforpalestine.org/"><img class="tfplogo" src="../images/tfplogo.jpeg" alt=""></a>
       </div>
     </main>
     <script src="notice.js"></script>
