Alt text and cleanup
Added alt text to images. Updated link for boycott list.

--- a/src/notice.html
+++ b/src/notice.html
@@ -26,16 +26,18 @@
 					<p>
 						By boycotting WIX, you're affirming the simple principle that Palestinians are entitled to the same rights as the rest of humanity. To learn more please visit <a href="https://bdsmovement.net/" target="_new">BDS (Boycott, Divestment, Sanctions) Movement</a>.
 					</p>
-					<img src="../images/palflag.png" class="palflag center" alt="Palestinian flag"/>
+					<div class="center">
+						<img src="../images/palflag.png" class="palflag" alt="Palestinian flag"/>
+					</div>
 					<p>
-						If you wish to <a id="bypass-link">continue to the site and turn off WIX Blocker</a>, please consider contacting the site owner and asking them to move their site to a different platform. <a href="https://www.israelitechalternatives.com/company/wix/">Here</a> is a list of alternatives.
+						If you wish to <a id="bypass-link">continue to the site</a> and turn off WIX Blocker, please consider contacting the site owner and asking them to move their site to a different platform. <a href="https://www.israelitechalternatives.com/company/wix/">Here</a> is a list of alternatives.
 					</p>
 				</div>
 				<div class="center">
 					<p class="links">
 						List of resources:
 						<br>
-						<a href="https://bdsmovement.net/Act-Now-Against-These-Companies-Profiting-From-Genocide">Act now against these companies profiting from genocide</a></li>
+						<a href="https://www.boycotzionism.com/">Act now against these companies profiting from genocide</a></li>
 					</p>
 				</div>
 				<div class="logos-container">
