Format html & css

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/popup.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="css/popup.css" rel="stylesheet" />
     <script defer src="js/index.js" type="application/javascript"></script>
   </head>
   <body>
     <main>
-      <img class="logo" src="../images/wixblockerlogo.svg" width="30px">
+      <img class="logo" src="../images/wixblockerlogo.svg" width="30px" />
       <div>
         <label for="enabled">BLOCK WIX?</label>
-        <input type="checkbox" name="enabled" id="enabled-chkbx" checked="true">
+        <input type="checkbox" name="enabled" id="enabled-chkbx" checked="true" />
       </div>
     </main>
   </body>
