--- a/src/notice.html
+++ b/src/notice.html
@@ -1,50 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>This is a Wix Site</title>
-    <meta charset="UTF-8">
-    <meta name="" content="default-src 'self';">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="notice.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="" content="default-src 'self';" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="notice.css" rel="stylesheet" />
     <script src="notice.js"></script>
   </head>
   <body>
     <main>
-      
       <div class="heading-container">
         <div class="head">
           <h1>This site is using WIX.</h1>
-          <img class="logo" src="../images/wixblockerlogo.svg" width="100px">
+          <img class="logo" src="../images/wixblockerlogo.svg" width="100px" />
         </div>
         <p>
-          <strong>%{visited_site}</strong>,
-          is using WIX, a company that profits from the illegal occupation of the Palestinian Territories.
+          <strong>%{visited_site}</strong>
+          , is using WIX, a company that profits from the illegal occupation of the Palestinian Territories.
         </p>
-        <br>
-        <hr>
-        <br>
-        <p>By boycotting WIX, you're affirming the simple principle that Palestinians are entitled to the same rights as the rest of humanity.
-          To learn more please visit <a href="https://bdsmovement.net/" target="_new">BDS (Boycott, Divestment, Sanctions) Movement</a>.</p>
+        <br />
+        <hr />
+        <br />
         <p>
+          By boycotting WIX, you're affirming the simple principle that Palestinians are entitled to the same rights as
+          the rest of humanity. To learn more please visit
+          <a href="https://bdsmovement.net/" target="_new">BDS (Boycott, Divestment, Sanctions) Movement</a>
+          .
+        </p>
+        <p></p>
 
         <div class="center">
-          <img src="../images/palflag.png" class="palflag " />
+          <img src="../images/palflag.png" class="palflag" />
         </div>
         <p>
-          If you wish to <a id="bypass-link">continue to the site and turn off WIX Blocker</a>, please consider contacting the site owner and asking them to move their site to a different platform. <a href="https://www.israelitechalternatives.com/company/wix/">Here</a> is a list of alternatives.
+          If you wish to
+          <a id="bypass-link">continue to the site and turn off WIX Blocker</a>
+          , please consider contacting the site owner and asking them to move their site to a different platform.
+          <a href="https://www.israelitechalternatives.com/company/wix/">Here</a>
+          is a list of alternatives.
         </p>
-
       </div>
       <div class="center">
         <p class="links">
           List of resources:
-          <br>
-          <a href="https://bdsmovement.net/Act-Now-Against-These-Companies-Profiting-From-Genocide">Act now against these companies profiting from genocide</a></li>
+          <br />
+          <a href="https://bdsmovement.net/Act-Now-Against-These-Companies-Profiting-From-Genocide">
+            Act now against these companies profiting from genocide
+          </a>
         </p>
       </div>
       <div class="logos-container">
-        <a href="https://bdsmovement.net/"><img class="bdslogo" src="../images/bdslogo.png" alt=""></a>
-        <a href="https://techforpalestine.org/"><img class="tfplogo" src="../images/tfplogo.jpeg" alt=""></a>
+        <a href="https://bdsmovement.net/">
+          <img class="bdslogo" src="../images/bdslogo.png" alt="" />
+        </a>
+        <a href="https://techforpalestine.org/">
+          <img class="tfplogo" src="../images/tfplogo.jpeg" alt="" />
+        </a>
       </div>
     </main>
     <script src="notice.js"></script>
