--- a/src/notice.html
+++ b/src/notice.html
@@ -41,7 +41,7 @@
         <p class="links">
             List of resources:
             <br>
-            <a href="https://bdsmovement.net/Act-Now-Against-These-Companies-Profiting-From-Genocide">Act now against these companies profiting from genocide</a></li>
+            <a href="https://bdsmovement.net/Act-Now-Against-These-Companies-Profiting-From-Genocide">Act now against these companies profiting from genocide</a>
         </p>
     </div>
     <div class="logos-container">
