--- a/src/notice.html
+++ b/src/notice.html
@@ -1,51 +1,59 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<title>This is a Wix Site</title>
-		<meta charset="UTF-8">
-		<meta name="" content="default-src 'self';">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="notice.css" rel="stylesheet">
-		<script src="notice.js"></script>
-	</head>
-	<body>
-		<main>      
-			<div class="heading-container">
-				<div class="head">
-					<h1>This site is using WIX.</h1>
-					<img class="logo" src="../images/wixblockerlogo.svg" width="100px" alt="Wix prohibition logo">
-				</div>
-				<p>
-					<strong>%{visited_site}</strong>
-					is using WIX, a company that profits from the illegal occupation of the Palestinian Territories.
-				</p>
-				<br>
-				<hr>
-				<br>
-				<div>
-					<p>
-						By boycotting WIX, you're affirming the simple principle that Palestinians are entitled to the same rights as the rest of humanity. To learn more please visit <a href="https://bdsmovement.net/" target="_new">BDS (Boycott, Divestment, Sanctions) Movement</a>.
-					</p>
-					<div class="center">
-						<img src="../images/palflag.png" class="palflag" alt="Palestinian flag"/>
-					</div>
-					<p>
-						If you wish to <a id="bypass-link">continue to the site</a> and turn off WIX Blocker, please consider contacting the site owner and asking them to move their site to a different platform. <a href="https://www.israelitechalternatives.com/company/wix/">Here</a> is a list of alternatives.
-					</p>
-				</div>
-				<div class="center">
-					<p class="links">
-						List of resources:
-						<br>
-						<a href="https://bdsmovement.net/Act-Now-Against-These-Companies-Profiting-From-Genocide">Act now against these companies profiting from genocide</a></li>
-					</p>
-				</div>
-				<div class="logos-container">
-					<a href="https://bdsmovement.net/"><img class="bdslogo" src="../images/bdslogo.png" alt="BDS logo"></a>
-					<a href="https://techforpalestine.org/"><img class="tfplogo" src="../images/tfplogo.jpeg" alt="Tech for Palestine logo"></a>
-				</div>
-			</div>
-		</main>
-	<script src="notice.js"></script>
-	</body>
+  <head>
+    <title>This is a Wix Site</title>
+    <meta charset="UTF-8" />
+    <meta name="" content="default-src 'self';" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="notice.css" rel="stylesheet" />
+    <script src="notice.js"></script>
+  </head>
+  <body>
+    <main>
+      <div class="heading-container">
+        <div class="head">
+          <h1>This site is using WIX.</h1>
+          <img class="logo" src="../images/wixblockerlogo.svg" width="100px" alt="Wix prohibition logo" />
+        </div>
+        <p>
+          <strong>%{visited_site}</strong>
+          is using WIX, a company that profits from the illegal occupation of the Palestinian Territories.
+        </p>
+        <br />
+        <hr />
+        <br />
+        <div>
+          <p>
+            By boycotting WIX, you're affirming the simple principle that Palestinians are entitled to the same rights
+            as the rest of humanity. To learn more please visit
+            <a href="https://bdsmovement.net/" target="_new">BDS (Boycott, Divestment, Sanctions) Movement</a>.
+          </p>
+          <div class="center">
+            <img src="../images/palflag.png" class="palflag" alt="Palestinian flag" />
+          </div>
+          <p>
+            If you wish to <a id="bypass-link">continue to the site</a> and turn off WIX Blocker, please consider
+            contacting the site owner and asking them to move their site to a different platform.
+            <a href="https://www.israelitechalternatives.com/company/wix/">Here</a> is a list of alternatives.
+          </p>
+        </div>
+        <div class="center">
+          <p class="links">
+            List of resources:
+            <br />
+            <a href="https://bdsmovement.net/Act-Now-Against-These-Companies-Profiting-From-Genocide"
+              >Act now against these companies profiting from genocide</a
+            >
+          </p>
+        </div>
+        <div class="logos-container">
+          <a href="https://bdsmovement.net/"><img class="bdslogo" src="../images/bdslogo.png" alt="BDS logo" /></a>
+          <a href="https://techforpalestine.org/"
+            ><img class="tfplogo" src="../images/tfplogo.jpeg" alt="Tech for Palestine logo"
+          /></a>
+        </div>
+      </div>
+    </main>
+    <script src="notice.js"></script>
+  </body>
 </html>
