Commit changes to notice.*

--- a/src/notice.html
+++ b/src/notice.html
@@ -6,7 +6,7 @@
     <meta name="" content="default-src 'self';" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="notice.css" rel="stylesheet" />
-    <script src="notice.js"></script>
+    <script type="module" src="notice.js"></script>
   </head>
   <body>
     <main>
